--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.monisha</groupId>
-  <artifactId>STUDENT_RESULT_APP</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>STUDENT RESULT APP</name>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.monisha</groupId>
+	<artifactId>STUDENT_RESULT_APP</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>STUDENT_RESULT_APP</name>
+
+<properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
+  
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+		</dependency>
+
+
+	</dependencies>
 </project>
